syntax = "proto3";

package product;

option go_package = ".;product";

message empty {}

message product {
  string  id      = 1;
  string  name    = 2;
  double  price   = 3;
  int64   stock   = 4;
}

message fetchProductsResponse {
  repeated product products = 1;
}

message findProductByIdRequest {
  string  id = 1;
}

message findProductByIdResponse {
  product product = 1;
}

service ProductService {
  rpc FetchProducts(empty) returns (fetchProductsResponse);
  rpc FindProductById(findProductByIdRequest) returns (findProductByIdResponse);
}